added hero image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css>">
+    <link rel="stylesheet" href="styles.css">
     <title>Cochella Group 3</title>
 </head>
 <body>
+    <div class="heroimg">
+        <h1>Coachella</h1>
+    </div>
+    
     
 </body>
 </html>
