--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css>">
+    <link rel="stylesheet" href="styles.css">
     <title>Cochella Group 3</title>
 </head>
 <body>
+    <div class="heroimg">
+        <h1>Coachella</h1>
+    </div>
     
+    
+
+
+
+
+
+
+
+
+
+    <table>
+      <thead>
+          <tr>
+              <th>Items</th>
+              <th scope="col">Expenditure</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <th scope="row">Donuts</th>
+              <td>3,000</td>
+          </tr>
+          <tr>
+              <th scope="row">Stationery</th>
+              <td>18,000</td>
+          </tr>
+      </tbody>
+      <tfoot>
+          <tr>
+              <th scope="row">Totals</th>
+              <td>21,000</td>
+          </tr>
+      </tfoot>
+  </table>
+
 </body>
 </html>
