--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <!-- The Main Body "About Cochella" -->
-   <div class="heroimg">
+    <div class="heroimg">
         <h1>Coachella</h1>
     </div>
-<!--  Yadi   -->
-   <div class="artists">
+    <!--  Yadi   -->
+    <div class="artists">
         <h2>Headliners</h2>
         <div class="row">
             <div class="card">
@@ -31,7 +31,7 @@
                 <img src="/media/gambino.jpeg" alt="Childish Gambino">
                 <h3>Childish Gambino</h3>
             </div>
-            </div>
+        </div>
     </div>
     <main class="main_body">
         <div class="main_top">
@@ -63,32 +63,41 @@
 
     </main>
     <!-- End of the main body, about Cochella -->
-  
- <table>
-      <thead>
-          <tr>
-              <th>Items</th>
-              <th scope="col">Expenditure</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <th scope="row">Donuts</th>
-              <td>3,000</td>
-          </tr>
-          <tr>
-              <th scope="row">Stationery</th>
-              <td>18,000</td>
-          </tr>
-      </tbody>
-      <tfoot>
-          <tr>
-              <th scope="row">Totals</th>
-              <td>21,000</td>
-          </tr>
-      </tfoot>
-  </table>
+    <footer>
+        <div class="footer_container">
+            <div class="footer_child1">
+                <h2>Artists</h2>
+                <hr>
+                <li>Daniel Cesar</li>
+                <li>Baby Keem</li>
+                <li>Billie Elish</li>
+                <li>Lady Gaga</li>
+                <li>Green Day</li>
+            </div>
+            <div class="footer_child1">
+                <h2> Vendors</h2>
+                <hr>
+                <li>Taco Maco</li>
+                <li>Seafood World</li>
+                <li>McDonalds</li>
+                <li>House of Jerk Chicken</li>
+                <li>In and Out</li>
+            </div>
 
+            <div class="footer_child1 ">
+                <h2> Activity</h2>
+                <hr>
+                <li>Ferris Wheel</li>
+                <li>Bumper Cars</li>
+                <li>Beer Garden</li>
+                <li>Art Walk</li>
+                <li>Merch</li>
+            </div>
+            <div>
+                <img src="./coachella1.png" alt=""></div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
